add the scanner component with basic camera controls

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.CloseButton {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 .logo {
   animation: logo-spin infinite 20s linear;
   height: 40vmin;
